reorganization of sections and minimization

--- a/Manuscript/aa_kevin.bib
+++ b/Manuscript/aa_kevin.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Sun, 28 May 2017.
+%% Created using Papers on Wed, 31 May 2017.
 %% http://papersapp.com/papers/
 
 @article{Anonymous:2015gf,
@@ -132,6 +132,17 @@ year = {2013},
 volume = {78},
 number = {5},
 pages = {1051--1077},
+month = sep
+}
+
+@article{Secor:2009ena,
+author = {Secor, David H and Kerr, Lisa A and Cadrin, Steven X},
+title = {{Connectivity effects on productivity, stability, and persistence in a herring metapopulation model}},
+journal = {ICES Journal of Marine Science},
+year = {2009},
+volume = {66},
+number = {8},
+pages = {1726--1732},
 month = sep
 }
 
@@ -402,16 +413,6 @@ pages = {2295--2300},
 month = feb
 }
 
-@article{Ciancio:2008p3440,
-author = {Ciancio, JE and Pascual, MA and Botto, F and Frere, E and Iribarne, O},
-title = {{Trophic relationships of exotic anadromous salmonids in the southern Patagonian Shelf as inferred from stable isotopes}},
-journal = {Limnology and Oceanography},
-year = {2008},
-volume = {53},
-number = {2},
-pages = {788--798}
-}
-
 @article{Yeakel:2013vz,
 author = {Yeakel, Justin D and Moore, J W and Guimar{\~a}es Jr, Paulo R and de Aguiar, M A M},
 title = {{Synchronisation and stability in river metapopulation networks}},
@@ -420,6 +421,16 @@ year = {2014},
 volume = {17},
 number = {3},
 pages = {273--283}
+}
+
+@article{Ciancio:2008p3440,
+author = {Ciancio, JE and Pascual, MA and Botto, F and Frere, E and Iribarne, O},
+title = {{Trophic relationships of exotic anadromous salmonids in the southern Patagonian Shelf as inferred from stable isotopes}},
+journal = {Limnology and Oceanography},
+year = {2008},
+volume = {53},
+number = {2},
+pages = {788--798}
 }
 
 @article{Hatton:2015fk,
@@ -670,15 +681,14 @@ pages = {881--900},
 month = jan
 }
 
-@article{Falcy:2014en,
-author = {Falcy, Matthew R},
-title = {{Density-dependent habitat selection of spawning Chinook salmon: broad-scale evidence and implications}},
-journal = {J. Anim. Ecol.},
-year = {2014},
-volume = {84},
-number = {2},
-pages = {n/a--n/a},
-month = oct
+@article{Young:1999ut,
+author = {Young, Kyle A},
+title = {{Managing the decline of Pacific salmon: metapopulation theory and artificial recolonization as ecological mitigation}},
+journal = {Can. J. Fish. Aquat. Sci.},
+year = {1999},
+volume = {56},
+number = {9},
+pages = {1700--1706}
 }
 
 @article{Quinn:2014bg,
@@ -692,18 +702,19 @@ pages = {1--12},
 month = aug
 }
 
-@article{Young:1999ut,
-author = {Young, Kyle A},
-title = {{Managing the decline of Pacific salmon: metapopulation theory and artificial recolonization as ecological mitigation}},
-journal = {Can. J. Fish. Aquat. Sci.},
-year = {1999},
-volume = {56},
-number = {9},
-pages = {1700--1706}
+@article{Falcy:2014en,
+author = {Falcy, Matthew R},
+title = {{Density-dependent habitat selection of spawning Chinook salmon: broad-scale evidence and implications}},
+journal = {J. Anim. Ecol.},
+year = {2014},
+volume = {84},
+number = {2},
+pages = {n/a--n/a},
+month = oct
 }
 
 @article{Shelton:2014br,
-author = {Shelton, Andrew Olaf and SAMHOURI, JAMEAL F and Stier, Adrian C and Levin, Philip S},
+author = {Shelton, Andrew Olaf and Samhouri, Jameal F and Stier, Adrian C and Levin, Philip S},
 title = {{Assessing trade-offs to inform ecosystem-based fisheries management of forage fish}},
 journal = {Sci. Rep.},
 year = {2014},
@@ -721,6 +732,13 @@ volume = {71},
 number = {7},
 pages = {959--972},
 month = mar
+}
+
+@article{Kuehn:2010tx,
+author = {Kuehn, C. and Siegmund, S. and Gross, T},
+title = {{On the dynamical analysis of evolution equations via generalized models}},
+journal = {Arxiv preprint arXiv:1012.4340},
+year = {2010}
 }
 
 @article{Thompson:2015hq,
@@ -742,13 +760,6 @@ volume = {14},
 number = {9},
 pages = {877--885},
 month = sep
-}
-
-@article{Kuehn:2010tx,
-author = {Kuehn, C. and Siegmund, S. and Gross, T},
-title = {{On the dynamical analysis of evolution equations via generalized models}},
-journal = {Arxiv preprint arXiv:1012.4340},
-year = {2010}
 }
 
 @article{Holling:1973hr,
@@ -1052,6 +1063,17 @@ pages = {340--348},
 month = apr
 }
 
+@article{Carlson:2014is,
+author = {Carlson, Stephanie M and Cunningham, Curry J and Westley, Peter A H},
+title = {{Evolutionary rescue in a changing world}},
+journal = {Trends Ecol. Evol.},
+year = {2014},
+volume = {29},
+number = {9},
+pages = {521--530},
+month = sep
+}
+
 @article{Moore:2014cq,
 author = {Moore, Jonathan W and Beakes, Michael P and Nesbitt, Holly K and Yeakel, Justin D and Patterson, David A and Thompson, Lisa A and Phillis, Corey C and Braun, Douglas C and Favaro, Corinna and Scott, David and Carr-Harris, Charmaine and Atlas, William I},
 title = {{Emergent stability in a large, free-flowing watershed}},
@@ -1060,17 +1082,6 @@ year = {2015},
 volume = {96},
 number = {2},
 pages = {340--347}
-}
-
-@article{Fussmann:2007fo,
-author = {Loreau, M},
-title = {{Eco-evolutionary dynamics of communities and ecosystems}},
-journal = {Funct. Ecol.},
-year = {2007},
-volume = {21},
-number = {3},
-pages = {465--477},
-month = jun
 }
 
 @article{Wang:2014ec,
@@ -1082,6 +1093,17 @@ volume = {17},
 number = {8},
 pages = {891--901},
 month = may
+}
+
+@article{Fussmann:2007fo,
+author = {Fussmann, G. F. and Loreau, M and Abrams, P. A.},
+title = {{Eco-Evolutionary Dynamics of Communities and Ecosystems}},
+journal = {Funct. Ecol.},
+year = {2007},
+volume = {21},
+number = {3},
+pages = {465--477},
+month = jun
 }
 
 @article{AndersonMay86,
@@ -1230,6 +1252,17 @@ volume = {266},
 number = {1419},
 pages = {605--609},
 month = mar
+}
+
+@article{Simons:2004jo,
+author = {Simons, A M},
+title = {{Many wrongs: the advantage of group navigation}},
+journal = {Trends Ecol. Evol.},
+year = {2004},
+volume = {19},
+number = {9},
+pages = {453--455},
+month = sep
 }
 
 @article{Anderson2004,
@@ -1385,6 +1418,17 @@ pages = {201406326--17551},
 month = nov
 }
 
+@article{Brown:1977gk,
+author = {Brown, James H and Kodric-Brown, Astrid},
+title = {{Turnover Rates in Insular Biogeography: Effect of Immigration on Extinction}},
+journal = {Ecology},
+year = {1977},
+volume = {58},
+number = {2},
+pages = {445--449},
+month = mar
+}
+
 @article{Thebault:2007kw,
 author = {Th{\'e}bault, Elisa and Huber, Veronika and Loreau, Michel},
 title = {{Cascading extinctions and ecosystem functioning: contrasting effects of diversity depending on food web structure}},
@@ -1502,6 +1546,17 @@ pages = {20133221--20133221},
 month = apr
 }
 
+@article{Bell:2011ki,
+author = {Bell, Graham and Gonzalez, Andrew},
+title = {{Adaptation and Evolutionary Rescue in Metapopulations Experiencing Environmental Deterioration}},
+journal = {Science},
+year = {2011},
+volume = {332},
+number = {6035},
+pages = {1327--1330},
+month = jun
+}
+
 @article{Fullerton:2011ii,
 author = {Fullerton, Aimee H and Lindley, Steven T and Pess, George R and Feist, Blake E and Steel, E Ashley and Mcelhany, Paul},
 title = {{Human Influence on the Spatial Structure of Threatened Pacific Salmon Metapopulations}},
@@ -1532,6 +1587,17 @@ year = {2014},
 volume = {83},
 number = {5},
 pages = {1035--1046}
+}
+
+@article{Jasper:2013cc,
+author = {Jasper, James R and Habicht, Christopher and Moffitt, Steve and Brenner, Rich and Marsh, Jennifer and Lewis, Bert and Fox, Elisabeth Creelman and Grauvogel, Zac and Olive, Serena D Rogers and Grant, W Stewart},
+title = {{Source-Sink Estimates of Genetic Introgression Show Influence of Hatchery Strays on Wild Chum Salmon Populations in Prince William Sound, Alaska}},
+journal = {PLoS ONE},
+year = {2013},
+volume = {8},
+number = {12},
+pages = {e81916},
+month = dec
 }
 
 @article{Whitlock:2005hu,
@@ -1575,6 +1641,17 @@ year = {2000},
 volume = {156},
 number = {2},
 pages = {156--174}
+}
+
+@article{Lowe:2015ft,
+author = {Lowe, Winsor H and Muhlfeld, Clint C and Allendorf, Fred W},
+title = {{Spatial sorting promotes the spread of maladaptive hybridization}},
+journal = {Trends Ecol. Evol.},
+year = {2015},
+volume = {30},
+number = {8},
+pages = {456--462},
+month = aug
 }
 
 @article{Schreiber:2011vh,
@@ -1676,6 +1753,17 @@ volume = {62},
 number = {8},
 pages = {1830--1839},
 month = aug
+}
+
+@article{Donohue:2013iu,
+author = {Donohue, Ian and Petchey, Owen L and Montoya, Jos{\'e} M and Jackson, Andrew L and McNally, Luke and Viana, Mafalda and Healy, Kevin and Lurgi, Miguel and O'Connor, Nessa E and Emmerson, Mark C},
+title = {{On the dimensionality of ecological stability.}},
+journal = {Ecol. Lett.},
+year = {2013},
+volume = {16},
+number = {4},
+pages = {421--429},
+month = apr
 }
 
 @article{H:2013fs,
