up to last paragraph

--- a/Manuscript/aa_kevin.bib
+++ b/Manuscript/aa_kevin.bib
@@ -96,6 +96,17 @@ number = {2},
 pages = {362--371}
 }
 
+@article{Anderson:2013bf,
+author = {Anderson, Joseph H and Faulds, Paul L and Atlas, William I and Quinn, Thomas P},
+title = {{Reproductive success of captively bred and naturally spawned Chinook salmon colonizing newly accessible habitat}},
+journal = {Evolutionary Applications},
+year = {2013},
+volume = {6},
+number = {2},
+pages = {165--179},
+month = feb
+}
+
 @article{Kuehn:2014wy,
 author = {Kuehn, Christian and Zschaler, Gerd and Gross, Thilo},
 title = {{Early warning signs for saddle-escape transitions in complex networks}},
@@ -223,6 +234,17 @@ volume = {47},
 pages = {219--247}
 }
 
+@article{Candy:2000hu,
+author = {Candy, John R and Beacham, Terry D},
+title = {{Patterns of homing and straying in southern British Columbia coded-wire tagged chinook salmon (Oncorhynchus tshawytscha) populations}},
+journal = {Fisheries Research},
+year = {2000},
+volume = {47},
+number = {1},
+pages = {41--56},
+month = jun
+}
+
 @article{Gibert:2013hp,
 author = {Gibert, Jean P and Pires, Mathias M and Thompson, John N and Guimar{\~a}es Jr, Paulo R},
 title = {{The spatial structure of antagonistic species affects coevolution in predictable ways.}},
@@ -243,6 +265,17 @@ volume = {10},
 number = {4},
 pages = {e1001303},
 month = apr
+}
+
+@article{Boughton:1999fa,
+author = {Boughton, David A},
+title = {{EMPIRICAL EVIDENCE FOR COMPLEX SOURCE{\textendash}SINK DYNAMICS WITH ALTERNATIVE STATES IN A BUTTERFLY METAPOPULATION}},
+journal = {Ecology},
+year = {1999},
+volume = {80},
+number = {8},
+pages = {2727--2739},
+month = dec
 }
 
 @article{Lande:2009ff,
@@ -433,6 +466,25 @@ number = {2},
 pages = {788--798}
 }
 
+@book{Hanski:1999vu,
+author = {Hanski, Ilkka},
+title = {{Metapopulation Ecology}},
+publisher = {Oxford University Press},
+year = {1999},
+month = mar
+}
+
+@article{Pess:2014isa,
+author = {Pess, G R and Quinn, T P and Gephard, S R and Saunders, R},
+title = {{Re-colonization of Atlantic and Pacific rivers by anadromous fishes: linkages between life history and the benefits of barrier removal}},
+journal = {Reviews in Fish Biology and Fisheries},
+year = {2014},
+volume = {24},
+number = {3},
+pages = {881--900},
+month = jan
+}
+
 @article{Hatton:2015fk,
 author = {Hatton, Ian A and McCann, Kevin S and Fryxell, John M and Davies, T Jonathan and Smerlak, Matteo and Sinclair, Anthony R E and Loreau, Michel},
 title = {{The predator-prey power law: Biomass scaling across terrestrial and aquatic biomes.}},
@@ -562,6 +614,16 @@ volume = {108},
 number = {17},
 pages = {7075--7080},
 month = apr
+}
+
+@article{Meinhardt:2012hw,
+author = {Meinhardt, Hans},
+title = {{Turing's theory of morphogenesis of 1952 and the subsequent discovery of the crucial role of local self-enhancement and long-range inhibition}},
+journal = {Interface Focus},
+year = {2012},
+volume = {2},
+number = {4},
+pages = {407--416}
 }
 
 @article{Yeakel:2014tj,
@@ -1126,6 +1188,17 @@ pages = {285--295},
 month = may
 }
 
+@article{Araki:2007cm,
+author = {Araki, Hitoshi and Cooper, Becky and Blouin, Michael S},
+title = {{Genetic Effects of Captive Breeding Cause a Rapid, Cumulative Fitness Decline in the Wild}},
+journal = {Science},
+year = {2007},
+volume = {318},
+number = {5847},
+pages = {100--103},
+month = oct
+}
+
 @article{Osterback:2013bz,
 author = {Osterback, Ann-Marie K and Frechette, Danielle M and Shelton, Andrew O and Hayes, Sean A and Bond, Morgan H and Moore, Jonathan W and Shaffer, Scott A},
 title = {{High predation on small populations: avian predation on imperiled salmonids}},
@@ -1293,6 +1366,16 @@ volume = {96},
 number = {10},
 pages = {2823--2833},
 month = oct
+}
+
+@article{Westley:2012ui,
+author = {Westley, Peter A H and { Corinne M. Conway} and Fleming, Ian A},
+title = {{Phenotypic divergence of exotic fish populations is shaped by spatial proximity and habitat differences across an invaded landscape}},
+journal = {Evol. Ecol. Res.},
+year = {2012},
+volume = {14},
+number = {2},
+pages = {147--167}
 }
 
 @article{Scheffer:2009gg,
@@ -1535,6 +1618,17 @@ pages = {420--426},
 month = apr
 }
 
+@article{Christie:2012bj,
+author = {Christie, Mark R and Marine, Melanie L and French, Rod A and Blouin, Michael S},
+title = {{Genetic adaptation to captivity can occur in a single generation.}},
+journal = {PNAS},
+year = {2012},
+volume = {109},
+number = {1},
+pages = {238--242},
+month = jan
+}
+
 @article{Krkosek:2014ch,
 author = {Krko{\v s}ek, Martin and Drake, J M},
 title = {{On signals of phase transitions in salmon population dynamics}},
@@ -1587,6 +1681,17 @@ year = {2014},
 volume = {83},
 number = {5},
 pages = {1035--1046}
+}
+
+@article{Levin:1992p1472,
+author = {Levin, Simon A},
+title = {{The Problem of Pattern and Scale in Ecology: The Robert H. MacArthur Award Lecture}},
+journal = {Ecology},
+year = {1992},
+volume = {73},
+number = {6},
+pages = {1943--1967},
+month = dec
 }
 
 @article{Jasper:2013cc,
@@ -1774,6 +1879,17 @@ year = {2013},
 volume = {70},
 number = {5},
 pages = {735--746}
+}
+
+@article{Chilcote:2003bb,
+author = {Chilcote, Mark W},
+title = {{Relationship between natural productivity and the frequency of wild fish in mixed spawning populations of wild and hatchery steelhead ( Oncorhynchus mykiss)}},
+journal = {Can. J. Fish. Aquat. Sci.},
+year = {2003},
+volume = {60},
+number = {9},
+pages = {1057--1067},
+month = sep
 }
 
 @article{Taylor:1996uz,
