final tweaks on figs

--- a/Manuscript/CoverLetter/YGWM_cover.tex
+++ b/Manuscript/CoverLetter/YGWM_cover.tex
@@ -50,8 +50,8 @@ We make several specific contributions:
 \end{itemize}
 
 
-Our theory is analytic, relatively simple, and synthesizes a variety of fundamental ecological theories (energy equivalence hypothesis, resource competition theory, Cope’s rule, the fasting endurance hypothesis) and shows how many of these are the natural consequence of a simple dynamical framework that incorporates the energetic consequences of starvation and recovery combined with allometric timescales. 
-We believe that our findings will be of general interest to ecologists, evolutionary biologists, and paleoecologists, such that consideration for publication in a broad interest journal such as \emph{Philosophical Transactions} is warranted.
+Our theory is general, relatively simple, and synthesizes a variety of fundamental ecological and evolutionary theories to show that our results are the natural consequence of a simple dynamical framework that incorporates the dispersal and local selection. 
+We believe that our findings will be of general interest to ecologists, freshwater biologists, and evolutionary biologists, such that consideration for publication in a broad interest journal such as \emph{Philosophical Transactions} is warranted.
 
 We appreciate your consideration of our manuscript.
 
