--- a/Manuscript/aa_kevin.bib
+++ b/Manuscript/aa_kevin.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Wed, 31 May 2017.
+%% Created using Papers on Thu, 01 Jun 2017.
 %% http://papersapp.com/papers/
 
 @article{Anonymous:2015gf,
@@ -73,6 +73,17 @@ volume = {22},
 number = {4},
 pages = {508--519},
 month = mar
+}
+
+@article{Ford:2002ip,
+author = {Ford, Michael J},
+title = {{Selection in Captivity during Supportive Breeding May Reduce Fitness in the Wild}},
+journal = {Conservation Biology},
+year = {2002},
+volume = {16},
+number = {3},
+pages = {815--825},
+month = jun
 }
 
 @article{Anderson:2010fq,
@@ -321,6 +332,17 @@ pages = {99--110},
 month = feb
 }
 
+@article{Whiteley:2015dk,
+author = {Whiteley, Andrew R and Fitzpatrick, Sarah W and Funk, W Chris and Tallmon, David A},
+title = {{Genetic rescue to the rescue}},
+journal = {Trends Ecol. Evol.},
+year = {2015},
+volume = {30},
+number = {1},
+pages = {42--49},
+month = jan
+}
+
 @article{Muhlfeld:2014hs,
 author = {Muhlfeld, Clint C and Kovach, Ryan P and Jones, Leslie A and Al-Chokhachy, Robert and Boyer, Matthew C and Leary, Robb F and Lowe, Winsor H and Luikart, Gordon and Allendorf, Fred W},
 title = {{Invasive hybridization in a threatened species is accelerated by climate change}},
@@ -404,6 +426,16 @@ number = {3},
 pages = {302--315}
 }
 
+@article{Liermann:2017gj,
+author = {Liermann, Martin and PESS, GEORGE and McHenry, Mike and McMillan, John and Elofson, Mel and Bennett, Todd and Moses, Raymond},
+title = {{Relocation and Recolonization of Coho Salmon Oncorhynchus kisutch in Two Tributaries to the Elwha River: Implications for Management and Monitoring}},
+journal = {Transactions of the American Fisheries Society},
+year = {2017},
+volume = {17},
+pages = {525},
+month = apr
+}
+
 @book{Jonsson:2011kg,
 author = {Jonsson, Bror and Jonsson, Nina},
 title = {{Ecology of Atlantic Salmon and Brown Trout}},
@@ -446,16 +478,6 @@ pages = {2295--2300},
 month = feb
 }
 
-@article{Yeakel:2013vz,
-author = {Yeakel, Justin D and Moore, J W and Guimar{\~a}es Jr, Paulo R and de Aguiar, M A M},
-title = {{Synchronisation and stability in river metapopulation networks}},
-journal = {Ecol. Lett.},
-year = {2014},
-volume = {17},
-number = {3},
-pages = {273--283}
-}
-
 @article{Ciancio:2008p3440,
 author = {Ciancio, JE and Pascual, MA and Botto, F and Frere, E and Iribarne, O},
 title = {{Trophic relationships of exotic anadromous salmonids in the southern Patagonian Shelf as inferred from stable isotopes}},
@@ -464,6 +486,16 @@ year = {2008},
 volume = {53},
 number = {2},
 pages = {788--798}
+}
+
+@article{Yeakel:2013vz,
+author = {Yeakel, Justin D and Moore, J W and Guimar{\~a}es Jr, Paulo R and de Aguiar, M A M},
+title = {{Synchronisation and stability in river metapopulation networks}},
+journal = {Ecol. Lett.},
+year = {2014},
+volume = {17},
+number = {3},
+pages = {273--283}
 }
 
 @book{Hanski:1999vu,
@@ -743,14 +775,15 @@ pages = {881--900},
 month = jan
 }
 
-@article{Young:1999ut,
-author = {Young, Kyle A},
-title = {{Managing the decline of Pacific salmon: metapopulation theory and artificial recolonization as ecological mitigation}},
-journal = {Can. J. Fish. Aquat. Sci.},
-year = {1999},
-volume = {56},
-number = {9},
-pages = {1700--1706}
+@article{Falcy:2014en,
+author = {Falcy, Matthew R},
+title = {{Density-dependent habitat selection of spawning Chinook salmon: broad-scale evidence and implications}},
+journal = {J. Anim. Ecol.},
+year = {2014},
+volume = {84},
+number = {2},
+pages = {n/a--n/a},
+month = oct
 }
 
 @article{Quinn:2014bg,
@@ -764,15 +797,14 @@ pages = {1--12},
 month = aug
 }
 
-@article{Falcy:2014en,
-author = {Falcy, Matthew R},
-title = {{Density-dependent habitat selection of spawning Chinook salmon: broad-scale evidence and implications}},
-journal = {J. Anim. Ecol.},
-year = {2014},
-volume = {84},
-number = {2},
-pages = {n/a--n/a},
-month = oct
+@article{Young:1999ut,
+author = {Young, Kyle A},
+title = {{Managing the decline of Pacific salmon: metapopulation theory and artificial recolonization as ecological mitigation}},
+journal = {Can. J. Fish. Aquat. Sci.},
+year = {1999},
+volume = {56},
+number = {9},
+pages = {1700--1706}
 }
 
 @article{Shelton:2014br,
@@ -796,13 +828,6 @@ pages = {959--972},
 month = mar
 }
 
-@article{Kuehn:2010tx,
-author = {Kuehn, C. and Siegmund, S. and Gross, T},
-title = {{On the dynamical analysis of evolution equations via generalized models}},
-journal = {Arxiv preprint arXiv:1012.4340},
-year = {2010}
-}
-
 @article{Thompson:2015hq,
 author = {Thompson, John N},
 title = {{Specific Hypotheses on the Geographic Mosaic of Coevolution.}},
@@ -822,6 +847,13 @@ volume = {14},
 number = {9},
 pages = {877--885},
 month = sep
+}
+
+@article{Kuehn:2010tx,
+author = {Kuehn, C. and Siegmund, S. and Gross, T},
+title = {{On the dynamical analysis of evolution equations via generalized models}},
+journal = {Arxiv preprint arXiv:1012.4340},
+year = {2010}
 }
 
 @article{Holling:1973hr,
@@ -1146,17 +1178,6 @@ number = {2},
 pages = {340--347}
 }
 
-@article{Wang:2014ec,
-author = {Wang, Shaopeng and Loreau, Michel},
-title = {{Ecosystem stability in space: $\alpha$, $\beta$ and $\gamma$ variability}},
-journal = {Ecol. Lett.},
-year = {2014},
-volume = {17},
-number = {8},
-pages = {891--901},
-month = may
-}
-
 @article{Fussmann:2007fo,
 author = {Fussmann, G. F. and Loreau, M and Abrams, P. A.},
 title = {{Eco-Evolutionary Dynamics of Communities and Ecosystems}},
@@ -1166,6 +1187,17 @@ volume = {21},
 number = {3},
 pages = {465--477},
 month = jun
+}
+
+@article{Wang:2014ec,
+author = {Wang, Shaopeng and Loreau, Michel},
+title = {{Ecosystem stability in space: $\alpha$, $\beta$ and $\gamma$ variability}},
+journal = {Ecol. Lett.},
+year = {2014},
+volume = {17},
+number = {8},
+pages = {891--901},
+month = may
 }
 
 @article{AndersonMay86,
